first version of CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,7 @@
+PROJECT(myOCR)
+SET(SRC_LIST main.cpp)
+MESSAGE(STATUS "BINARY=" ${myOCR_BINARY_DIR})
+MESSAGE(STATUS "SOURCE=" ${myOCR_SOURCE_DIR})
+ADD_EXECUTABLE(myOCR ${SRC_LIST})
 
 
