Add Qt4 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-PROJECT(myOCR)
-ADD_SUBDIRECTORY(src bin)
-MESSAGE(STATUS "BINARY=" ${PROJECT_BINARY_DIR})
-MESSAGE(STATUS "SOURCE=" ${PROJECT_SOURCE_DIR})
 
+#设定解决方案的名称
+SET(THIS_SOLUTION_NAME MyOCR)
+
+PROJECT(${THIS_SOLUTION_NAME})
+ADD_SUBDIRECTORY(src bin)
