fix Qt4 settings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,67 +1,42 @@
 #设定项目名称
 SET(THIS_PROJECT_NAME myOCR)
 
-#设定QT4环境 AUTOMOC???
+#设定QT4环境,参考FindQt4.cmake
 FIND_PACKAGE(Qt4 REQUIRED)
-INCLUDE(${QT_USE_FILE})  # include UseQt4.cmake
-MESSAGE(STATUS "QT_USE_FILE=" ${QT_USE_FILE})
-   
-# support for out-of-source build
-INCLUDE_DIRECTORIES(
-  ${CMAKE_CURRENT_BINARY_DIR} #this is where ui_SimpleViewUI.h is generated
-  ${CMAKE_CURRENT_SOURCE_DIR}
-)
-MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR=" ${CMAKE_CURRENT_BINARY_DIR})
-MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR=" ${CMAKE_CURRENT_SOURCE_DIR})
 
-# Set your files and resources here  
-  
-# 1. Set path for each kind of files  
-SET(SourceFilesPath ${PROJECT_SOURCE_DIR}/src)
-MESSAGE(STATUS "SourceFilesPath=" ${SourceFilesPath})
+#引入需要的Qt库，必须放在QT_USE_FILE之前
+SET(QT_USE_QTMAIN TRUE)
+#SET(QT_USE_QTXML TRUE)
+#SET(QT_USE_QTOPENGL TRUE)
 
-SET(UIFilesPath ${PROJECT_SOURCE_DIR}/ui)
-MESSAGE(STATUS "UIFilesPath=" ${UIFilesPath})
+#引入Qt必要的设定
+INCLUDE(${QT_USE_FILE})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
-SET(HeadersFilesPath ${PROJECT_SOURCE_DIR}/inc)
-MESSAGE(STATUS "HeadersFilesPath=" ${HeadersFilesPath})
-  
-# 2. Add items into current project  
-SET(SourceFiles main.cpp) 
-SET(UIFiles)
-SET(HeadersFiles) 
-  
-# 3. Concatenate items and their paths  
-FOREACH(SrcFile ${SourceFiles})  
-    SET(SimpleViewSrcs ${SimpleViewSrcs} ${SourceFilesPath}/${SrcFile})  
-ENDFOREACH(SrcFile)  
-MESSAGE(STATUS "Files: " ${SimpleViewSrcs})  
-  
-FOREACH(UIFile ${UIFiles})  
-    SET(SimpleViewUI ${SimpleViewUI} ${UIFilesPath}/${UIFile})  
-ENDFOREACH(UIFile)  
-MESSAGE(STATUS "UIFlie: " ${SimpleViewUI})  
-  
-FOREACH(HeaderFile ${HeadersFiles})  
-    SET(SimpleViewHeaders ${SimpleViewHeaders} ${HeadersFilesPath}/${HeaderFile})  
-ENDFOREACH(HeaderFile)  
-MESSAGE(STATUS "Headers: " ${SimpleViewHeaders})  
-  
-# Wrap items to pass them to qmake  
-QT4_WRAP_UI(UISrcs ${SimpleViewUI})  
-QT4_WRAP_CPP(MOCSrcs ${SimpleViewHeaders} )  
-   
+#设定源文件
+SET(sourceFiles main.cpp)
+SET(headerFiles) #包含Q_OBJECT的头文件
+SET(uiFiles)
+SET(resourceFiles)
+
+#对Qt源文件进行处理
+QT4_WRAP_CPP(mocCpps ${headerFiles} )
+QT4_WRAP_UI(uicHeaders ${uiFiles})
+QT4_ADD_RESOURCES(qrcCpps ${resourceFiles})
+
+#对生成文件分组
 SOURCE_GROUP("Resources" FILES  
-  ${SimpleViewUI}  
-)  
-   
+  ${uiFiles}  
+)
 SOURCE_GROUP("Generated" FILES  
-  ${UISrcs}  
-  ${MOCSrcs}  
-)  
+  ${uicHeaders}
+  ${mocCpps}
+  ${qrcCpps}
+)
 
-ADD_EXECUTABLE(${THIS_PROJECT_NAME} ${SimpleViewSrcs} ${UISrcs} ${MOCSrcs})
-TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} ${QT_QTMAIN_LIBRARY} ${QT_LIBRARIES})
+#目标文件和链接文件
+ADD_EXECUTABLE(${THIS_PROJECT_NAME} ${sourceFiles} ${uicHeaders} ${mocCpps} ${qrcCpps})
+TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} ${QT_LIBRARIES})
 
 #避免启动时出现命令行窗口
 IF(WIN32)
