filter headers with Q_OBJECT

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 #修改构建版本号触发重新创建项目文件
-SET(BUILD_VERSION 1)
+SET(BUILD_VERSION 2)
 
 #设定项目名称
 SET(THIS_PROJECT_NAME MyOCR)
@@ -22,27 +22,40 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
 
 #设定源文件
 FILE(GLOB CPP_FILES "*.cpp")
-SET(HEADER_FILES) #包含Q_OBJECT的头文件
+FILE(GLOB HEADER_FILES "*.h")
 FILE(GLOB UI_FILES "*.ui")
 SET(QRC_FILES)
 
+
+set(HEADER_FILES_HAVING_Q_OBJECT)
+foreach(header ${HEADER_FILES})
+    file(STRINGS "${header}" lines REGEX "Q_OBJECT")
+    if(lines)
+        list(APPEND HEADER_FILES_HAVING_Q_OBJECT "${header}")
+    endif()
+endforeach()
+
 #对Qt源文件进行处理
-QT4_WRAP_CPP(MOC_FILES ${HEADER_FILES} )
+QT4_WRAP_CPP(MOC_FILES ${HEADER_FILES_HAVING_Q_OBJECT} )
 QT4_WRAP_UI(UIC_FILES ${UI_FILES})
 QT4_ADD_RESOURCES(RES_FILES ${QRC_FILES})
 
 #对生成文件分组
-SOURCE_GROUP("UI" FILES  
-	${UI_FILES}  
+SOURCE_GROUP("Code" FILES
+	${HEADER_FILES}
+	${CPP_FILES}
 )
-SOURCE_GROUP("Generated" FILES  
+SOURCE_GROUP("UI" FILES
+	${UI_FILES}
+)
+SOURCE_GROUP("Generated" FILES
 	${MOC_FILES}
 	${UIC_FILES}
 	${RES_FILES}
 )
 
 #目标文件和链接文件
-ADD_EXECUTABLE(${THIS_PROJECT_NAME} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES})
+ADD_EXECUTABLE(${THIS_PROJECT_NAME} ${HEADER_FILES} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES})
 TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} ${QT_LIBRARIES})
 
 #链接第三方lib文件
