cmake has bug in VC2010 to hide console

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-#修改构建版本号触发重新创建项目文件
+#修改版本号强制触发构建
 SET(BUILD_VERSION 2)
 
 #设定项目名称
@@ -27,13 +27,13 @@ FILE(GLOB UI_FILES "*.ui")
 SET(QRC_FILES)
 
 
-set(HEADER_FILES_HAVING_Q_OBJECT)
-foreach(header ${HEADER_FILES})
-    file(STRINGS "${header}" lines REGEX "Q_OBJECT")
-    if(lines)
-        list(APPEND HEADER_FILES_HAVING_Q_OBJECT "${header}")
-    endif()
-endforeach()
+SET(HEADER_FILES_HAVING_Q_OBJECT)
+FOREACH(HEADER ${HEADER_FILES})
+    FILE(STRINGS "${HEADER}" LINES REGEX "Q_OBJECT")
+    IF(LINES)
+        LIST(APPEND HEADER_FILES_HAVING_Q_OBJECT "${HEADER}")
+    ENDIF()
+ENDFOREACH()
 
 #对Qt源文件进行处理
 QT4_WRAP_CPP(MOC_FILES ${HEADER_FILES_HAVING_Q_OBJECT} )
@@ -55,7 +55,7 @@ SOURCE_GROUP("Generated" FILES
 )
 
 #目标文件和链接文件
-ADD_EXECUTABLE(${THIS_PROJECT_NAME} ${HEADER_FILES} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES})
+ADD_EXECUTABLE(${THIS_PROJECT_NAME} WIN32 ${HEADER_FILES} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES})
 TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} ${QT_LIBRARIES})
 
 #链接第三方lib文件
@@ -71,8 +71,3 @@ FOREACH(DLL_FILE ${DLL_FILES})
 		"${CMAKE_CURRENT_BINARY_DIR}/$<CONFIGURATION>"
 	)
 ENDFOREACH(DLL_FILE)
-
-#避免启动时出现命令行窗口
-IF(WIN32)
-    SET_TARGET_PROPERTIES(${THIS_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
-ENDIF()
