add application icon and rc file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(THIS_SOLUTION_NAME MyOCR)
 
 PROJECT(${THIS_SOLUTION_NAME})
-ADD_SUBDIRECTORY(src bin)
+ADD_SUBDIRECTORY(src)
