--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,10 +20,14 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
 #LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
 
+#设置资源文件夹的位置
+SET(RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)
+
 #设定源文件
 FILE(GLOB CPP_FILES "*.cpp")
 FILE(GLOB HEADER_FILES "*.h")
 FILE(GLOB UI_FILES "*.ui")
+SET(RC_FILES ${RESOURCE_DIR}/icon.rc)
 SET(QRC_FILES)
 
 
@@ -41,12 +45,13 @@ QT4_WRAP_UI(UIC_FILES ${UI_FILES})
 QT4_ADD_RESOURCES(RES_FILES ${QRC_FILES})
 
 #对生成文件分组
-SOURCE_GROUP("Code" FILES
+SOURCE_GROUP("Codes" FILES
 	${HEADER_FILES}
 	${CPP_FILES}
 )
-SOURCE_GROUP("UI" FILES
+SOURCE_GROUP("Resouces" FILES
 	${UI_FILES}
+	${RC_FILES}
 )
 SOURCE_GROUP("Generated" FILES
 	${MOC_FILES}
@@ -55,7 +60,7 @@ SOURCE_GROUP("Generated" FILES
 )
 
 #目标文件和链接文件
-ADD_EXECUTABLE(${THIS_PROJECT_NAME} WIN32 ${HEADER_FILES} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES})
+ADD_EXECUTABLE(${THIS_PROJECT_NAME} WIN32 ${HEADER_FILES} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES} ${RC_FILES})
 TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} ${QT_LIBRARIES})
 
 #链接第三方lib文件
