add qrc and menu icon

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,8 +27,8 @@ SET(RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)
 FILE(GLOB CPP_FILES "*.cpp")
 FILE(GLOB HEADER_FILES "*.h")
 FILE(GLOB UI_FILES "*.ui")
-SET(RC_FILES ${RESOURCE_DIR}/icon.rc)
-SET(QRC_FILES)
+SET(RC_FILES ${RESOURCE_DIR}/app.rc)
+SET(QRC_FILES ${RESOURCE_DIR}/app.qrc)
 
 
 SET(HEADER_FILES_HAVING_Q_OBJECT)
@@ -52,6 +52,7 @@ SOURCE_GROUP("Codes" FILES
 SOURCE_GROUP("Resouces" FILES
 	${UI_FILES}
 	${RC_FILES}
+	${QRC_FILES}
 )
 SOURCE_GROUP("Generated" FILES
 	${MOC_FILES}
