use cmake to copy data files to the target dir

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,3 +77,10 @@ FOREACH(DLL_FILE ${DLL_FILES})
 		"${CMAKE_CURRENT_BINARY_DIR}/$<CONFIGURATION>"
 	)
 ENDFOREACH(DLL_FILE)
+
+#拷贝数据文件文件到执行目录
+add_custom_command(TARGET ${THIS_PROJECT_NAME} POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+	${PROJECT_SOURCE_DIR}/data
+	${CMAKE_CURRENT_BINARY_DIR}/$<CONFIGURATION>
+)
