--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,8 @@ FIND_PACKAGE(Qt4 REQUIRED)
 
 #引入需要的Qt库，必须放在QT_USE_FILE之前
 SET(QT_USE_QTMAIN TRUE)
+SET(QT_USE_QTOPENGL TRUE)
 #SET(QT_USE_QTXML TRUE)
-#SET(QT_USE_QTOPENGL TRUE)
 
 #引入Qt必要的设定
 INCLUDE(${QT_USE_FILE})
