add opengl support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,6 +63,7 @@ SOURCE_GROUP("Generated" FILES
 #目标文件和链接文件
 ADD_EXECUTABLE(${THIS_PROJECT_NAME} WIN32 ${HEADER_FILES} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES} ${RC_FILES})
 TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} ${QT_LIBRARIES})
+TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} opengl32)
 
 #链接第三方lib文件
 FILE(GLOB LIB_FILES "${PROJECT_SOURCE_DIR}/lib/*.lib")
