place shared codes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,8 @@ SET(RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)
 #设定源文件
 FILE(GLOB CPP_FILES "*.cpp")
 FILE(GLOB HEADER_FILES "*.h")
+FILE(GLOB SHARED_CPP_FILES "shared/*.cpp")
+FILE(GLOB SHARED_HEADER_FILES "shared/*.h")
 FILE(GLOB UI_FILES "*.ui")
 SET(RC_FILES ${RESOURCE_DIR}/app.rc)
 SET(QRC_FILES ${RESOURCE_DIR}/app.qrc)
@@ -49,6 +51,10 @@ SOURCE_GROUP("Codes" FILES
 	${HEADER_FILES}
 	${CPP_FILES}
 )
+SOURCE_GROUP("Shared" FILES
+	${SHARED_HEADER_FILES}
+	${SHARED_CPP_FILES}
+)
 SOURCE_GROUP("Resouces" FILES
 	${UI_FILES}
 	${RC_FILES}
@@ -61,7 +67,12 @@ SOURCE_GROUP("Generated" FILES
 )
 
 #目标文件和链接文件
-ADD_EXECUTABLE(${THIS_PROJECT_NAME} WIN32 ${HEADER_FILES} ${CPP_FILES} ${MOC_FILES} ${UIC_FILES} ${RES_FILES} ${RC_FILES})
+ADD_EXECUTABLE(${THIS_PROJECT_NAME} WIN32 
+	${HEADER_FILES} ${CPP_FILES}
+	${SHARED_HEADER_FILES} ${SHARED_CPP_FILES}
+	${MOC_FILES} ${UIC_FILES} 
+	${RES_FILES} ${RC_FILES})
+
 TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} ${QT_LIBRARIES})
 TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} opengl32)
 
