--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,15 +26,20 @@ SET(RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)
 #设定源文件
 FILE(GLOB CPP_FILES "*.cpp")
 FILE(GLOB HEADER_FILES "*.h")
-FILE(GLOB SHARED_CPP_FILES "shared/*.cpp")
-FILE(GLOB SHARED_HEADER_FILES "shared/*.h")
+
+FILE(GLOB SHARED_CPP_FILES "share/*.cpp")
+FILE(GLOB SHARED_HEADER_FILES "share/*.h")
+
+FILE(GLOB TWAIN_CPP_FILES "twain/*.c*")
+FILE(GLOB TWAIN_HEADER_FILES "twain/*.h")
+
 FILE(GLOB UI_FILES "*.ui")
 SET(RC_FILES ${RESOURCE_DIR}/app.rc)
 SET(QRC_FILES ${RESOURCE_DIR}/app.qrc)
 
 
 SET(HEADER_FILES_HAVING_Q_OBJECT)
-FOREACH(HEADER ${HEADER_FILES})
+FOREACH(HEADER ${HEADER_FILES} ${TWAIN_HEADER_FILES})
     FILE(STRINGS "${HEADER}" LINES REGEX "Q_OBJECT")
     IF(LINES)
         LIST(APPEND HEADER_FILES_HAVING_Q_OBJECT "${HEADER}")
@@ -51,9 +56,13 @@ SOURCE_GROUP("Codes" FILES
 	${HEADER_FILES}
 	${CPP_FILES}
 )
-SOURCE_GROUP("Shared" FILES
+SOURCE_GROUP("Share" FILES
 	${SHARED_HEADER_FILES}
 	${SHARED_CPP_FILES}
+)
+SOURCE_GROUP("Twain" FILES
+	${TWAIN_HEADER_FILES}
+	${TWAIN_CPP_FILES}
 )
 SOURCE_GROUP("Resouces" FILES
 	${UI_FILES}
@@ -70,6 +79,7 @@ SOURCE_GROUP("Generated" FILES
 ADD_EXECUTABLE(${THIS_PROJECT_NAME} WIN32 
 	${HEADER_FILES} ${CPP_FILES}
 	${SHARED_HEADER_FILES} ${SHARED_CPP_FILES}
+	${TWAIN_HEADER_FILES} ${TWAIN_CPP_FILES}
 	${MOC_FILES} ${UIC_FILES} 
 	${RES_FILES} ${RC_FILES})
 
